--- a/release/app/package.json
+++ b/release/app/package.json
@@ -14,5 +14,10 @@
     "postinstall": "npm run rebuild && npm run link-modules",
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
-  "dependencies": {}
+  "dependencies": {
+    "electron": "^24.1.2",
+    "electron-rebuild": "^3.2.9",
+    "node-abi": "^3.40.0",
+    "sqlite3": "^5.1.6"
+  }
 }
