최종 빌드를 위한 배포환경 수정

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
       }
     ]
   },
+  "postinstall": "electron-builder install-app-deps",
   "jest": {
     "moduleDirectories": [
       "node_modules",
